--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ body {
 
 <div class="container">
     <div class="avatar-container">
-        <img class="avatar" src="https://i.imgur.com/o9RZ9Lz.png" alt="Avatar">
+        <img class="avatar" src="https://xatimg.com/image/a5dQrdR1aW3R.png" alt="Avatar">
 
         <!-- الرموز العائمة -->
         <div class="emoji" style="left:10%;">❤️</div>
@@ -141,10 +141,10 @@ body {
         <div class="emoji" style="left:85%; animation-duration: 4.5s;">💙</div>
     </div>
 
-    <div class="name">ليلى</div>
+    <div class="name"> ͠ɖƲιιȻ  </div>
     <div class="status">
-        أهلاً بكم<br>
-        في صفحتي الخاصة 🌸
+       la 'uhibuk faqat bisabab shakhsiatika, walakin lamaa 'akun ealayh eindama takun bijanibi, 'uhibuk lays min 'ajl ma sanaeath binafsika, walakin min 'ajl ma tasnaeuh li aydan.<br>
+       ♥️♥️
     </div>
 
     <div class="videos">
