--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@ body {
 
     <div class="videos">
         <div class="video-card">
-            <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1&mute=1" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" allowfullscreen></iframe>
         </div>
         <div class="video-card">
-            <iframe src="https://www.youtube.com/embed/3JZ_D3ELwOQ?autoplay=1&mute=1" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/3JZ_D3ELwOQ" allowfullscreen></iframe>
         </div>
     </div>
 
