--- a/index.html
+++ b/index.html
@@ -158,13 +158,13 @@ body {
 
     <div class="social">
         <a href="#" title="Facebook">
-            <img src="https://i.imgur.com/1Vnq6wH.png" alt="Facebook">
+            <img src="https://img.alfrsantv.com/img/f176524531738251.png" alt="Facebook">
         </a>
         <a href="#" title="Instagram">
-            <img src="https://i.imgur.com/kxFfZx5.png" alt="Instagram">
+            <img src="https://img.alfrsantv.com/img/f176524532676071.png" alt="Instagram">
         </a>
-        <a href="#" title="YouTube">
-            <img src="https://i.imgur.com/Q9H2J2f.png" alt="YouTube">
+        <a href="#" title="X">
+            <img src="https://img.alfrsantv.com/img/f176524533570421.png" alt="YouTube">
         </a>
     </div>
 </div>
