--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ليلى - ملف شخصي</title>
+<title>Dullc</title>
 
 <!-- خط Tajawal -->
 <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
@@ -148,16 +148,16 @@ body {
     </div>
 
     <div class="videos">
-        <div class="video-card">
-            <iframe src="https://www.youtube.com/embed/mcp5fsJ8dw8" allowfullscreen></iframe>
-        </div>
-        <div class="video-card">
-            <iframe src="https://www.youtube.com/embed/AGEB2jPo920" allowfullscreen></iframe>
-        </div>
+    <div class="video-card">
+        <iframe src="https://www.youtube.com/embed/mcp5fsJ8dw8" allowfullscreen></iframe>
     </div>
-<div class="video-card">
-            <iframe src="https://www.youtube.com/embed/1uMZhJeXLYw" allowfullscreen></iframe>
-        </div>
+    <div class="video-card">
+        <iframe src="https://www.youtube.com/embed/HVgy8Ge0GJQ" allowfullscreen></iframe>
+    </div>
+    <div class="video-card">
+        <iframe src="https://www.youtube.com/embed/1uMZhJeXLYw" allowfullscreen></iframe>
+    </div>
+</div>
     <div class="social">
         <a href="#" title="Facebook">
             <img src="https://img.alfrsantv.com/img/f176524531738251.png" alt="Facebook">
