--- a/index.html
+++ b/index.html
@@ -82,19 +82,21 @@ body {
 .videos {
     margin-top: 30px;
     display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
+    gap: 15px;
     justify-content: center;
+    align-items: stretch; 
+    flex-wrap: nowrap; 
 }
 
 .video-card {
-    width: 280px;
-    height: 160px;
+    width: 150px;  
+    height: 300px;  
     border-radius: 20px;
     overflow: hidden;
     box-shadow: 0 0 15px rgba(0,180,255,0.4);
     transition: transform 0.3s, box-shadow 0.3s;
 }
+
 
 .video-card iframe {
     width: 100%;
