--- a/index.html
+++ b/index.html
@@ -127,6 +127,14 @@ body {
     transform: scale(1.2);
     box-shadow: 0 0 15px #00aaff;
 }
+    
+.divider {
+    width: 80%;
+    height: 2px;
+    margin: 20px auto;
+    background: linear-gradient(to right, transparent, #ff4f9a, transparent);
+}
+
 </style>
 </head>
 <body>
@@ -148,7 +156,9 @@ body {
        la 'uhibuk faqat bisabab shakhsiatika, walakin lamaa 'akun ealayh eindama takun bijanibi, 'uhibuk lays min 'ajl ma sanaeath binafsika, walakin min 'ajl ma tasnaeuh li aydan.<br>
        ♥️♥️
     </div>
+<div class="divider"></div>
 
+    
     <div class="videos">
     <div class="video-card">
         <iframe src="https://www.youtube.com/embed/mcp5fsJ8dw8" allowfullscreen></iframe>
