--- a/index.html
+++ b/index.html
@@ -168,7 +168,8 @@ body {
     <div class="name"> ͠ɖƲιιȻ </div>
 
     <div class="status">
-       la 'uhibuk faqat bisabab shakhsiatika...<br>
+       la 'uhibuk faqat bisabab shakhsiatika, walakin lamaa 'akun ealayh eindama takun bijanibi, 'uhibuk lays min 'ajl ma sanaeath binafsika, walakin min 'ajl ma tasnaeuh li aydan.
+<br>
        ♥️♥️
     </div>
 
