--- a/index.html
+++ b/index.html
@@ -1,196 +1,83 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Dullc</title>
-<link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
-
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Dullcpro – Golden Edition</title>
 <style>
-body {
-    margin: 0;
-    padding: 0;
-    font-family: 'Tajawal', sans-serif;
-    background: linear-gradient(135deg, #280D32, #3B1450, #1e0724);
-    color: #f0d8ff;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    min-height: 100vh;
-    overflow-x: hidden;
-}
-
-.container {
-    max-width: 800px;
-    width: 90%;
-    background: rgba(255,255,255,0.05);
-    border-radius: 25px;
-    padding: 30px;
-    margin-top: 40px;
-    text-align: center;
-    box-shadow: 0 0 40px rgba(255, 0, 255, 0.15);
-    position: relative;
-    overflow: hidden;
-    backdrop-filter: blur(8px);
-}
-
-.avatar-container {
-    position: relative;
-    display: inline-block;
-}
-
-.avatar {
-    width: 180px;
-    height: 180px;
-    border-radius: 50%;
-    border: 4px solid #d180ff;
-    object-fit: cover;
-    transition: transform 0.3s, box-shadow 0.3s;
-    z-index: 2;
-}
-
-.avatar:hover {
-    transform: scale(1.1);
-    box-shadow: 0 0 25px #d180ff;
-}
-
-.emoji {
-    position: absolute;
-    font-size: 24px;
-    opacity: 0.8;
-    animation: floatUp linear infinite;
-}
-
-@keyframes floatUp {
-    0% { transform: translateY(0) scale(1); opacity: 1; }
-    100% { transform: translateY(-180px) scale(1.2); opacity: 0; }
-}
-
-.name {
-    font-size: 32px;
-    margin-top: 15px;
-    font-weight: bold;
-    color: #ffb3ff;
-}
-
-/* ====== الحالة ====== */
-.status {
-    font-size: 18px;
-    margin-top: 5px;
-    line-height: 1.7;
-    color: #f8dfff;
-}
-
-/* ====== الفيديوهات ====== */
-.videos {
-    margin-top: 30px;
-    display: flex;
-    gap: 15px;
-    justify-content: center;
-    align-items: stretch;
-    flex-wrap: nowrap;
-}
-
-.video-card {
-    width: 150px;
-    height: 300px;
-    border-radius: 20px;
-    overflow: hidden;
-    box-shadow: 0 0 15px rgba(255, 0, 255, 0.25);
-    transition: transform 0.3s, box-shadow 0.3s;
-}
-
-.video-card iframe {
-    width: 100%;
-    height: 100%;
-    border: none;
-}
-
-.video-card:hover {
-    transform: scale(1.05);
-    box-shadow: 0 0 25px #d180ff;
-}
-
-.social {
-    margin-top: 25px;
-    display: flex;
-    justify-content: center;
-    gap: 15px;
-}
-
-.social img {
-    width: 45px;
-    height: 45px;
-    transition: transform 0.3s, box-shadow 0.3s;
-    border-radius: 12px;
-}
-
-.social img:hover {
-    transform: scale(1.2);
-    box-shadow: 0 0 15px #d180ff;
-}
-
-.divider-anim {
-    width: 80%;
-    height: 3px;
-    margin: 25px auto;
-    background: linear-gradient(90deg, #ff4f9a, #cb63ff, #7a3cff);
-    background-size: 300% 100%;
-    animation: move 7s linear infinite;
-    border-radius: 10px;
-}
-
-@keyframes move {
-    0% { background-position: 0% 0; }
-    100% { background-position: 300% 0; }
-}
+  * {margin:0; padding:0; box-sizing:border-box; font-family:"Cairo", sans-serif;}
+  body {
+    background:#0b0b0b;
+    color:#f5d380;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    min-height:100vh;
+    padding:20px;
+  }
+  .card {
+    width:100%;
+    max-width:420px;
+    background:#111;
+    border:1px solid rgba(255,215,0,0.25);
+    border-radius:30px;
+    padding:35px 30px;
+    text-align:center;
+    box-shadow:0 0 25px rgba(255,215,0,0.15);
+    position:relative;
+    overflow:hidden;
+  }
+  .glow {
+    position:absolute;
+    top:-40%; left:50%; transform:translateX(-50%);
+    width:400px; height:400px;
+    background: radial-gradient(circle, rgba(255,215,0,0.25), transparent 70%);
+    filter:blur(70px);
+    z-index:0;
+  }
+  .avatar {
+    width:130px;
+    height:130px;
+    border-radius:50%;
+    border:4px solid #f5d380;
+    padding:5px;
+    background:#000;
+    box-shadow:0 0 18px rgba(255,215,0,0.4);
+    position:relative;
+    z-index:2;
+  }
+  h1 {
+    margin:18px 0 10px;
+    font-size:28px;
+    letter-spacing:1px;
+  }
+  p {
+    font-size:17px;
+    line-height:1.8;
+    opacity:.9;
+    margin-bottom:20px;
+  }
+  .heart {
+    font-size:40px;
+    animation:pulse 1.4s infinite ease-in-out;
+  }
+  @keyframes pulse {
+    0% {transform:scale(1); opacity:0.8;}
+    50% {transform:scale(1.3); opacity:1;}
+    100% {transform:scale(1); opacity:0.8;}
+  }
 </style>
 </head>
 <body>
-
-<div class="container">
-    <div class="avatar-container">
-        <img class="avatar" src="https://xatimg.com/image/a5dQrdR1aW3R.png" alt="Avatar">
-
-        <div class="emoji" style="left:10%;">❤️</div>
-        <div class="emoji" style="left:30%; animation-duration: 4s;">💖</div>
-        <div class="emoji" style="left:50%; animation-duration: 5s;">🌸</div>
-        <div class="emoji" style="left:70%; animation-duration: 6s;">✨</div>
-        <div class="emoji" style="left:85%; animation-duration: 4.5s;">💙</div>
-    </div>
-
-    <div class="name"> ͠ɖƲιιȻ </div>
-
-    <div class="status">
-       la 'uhibuk faqat bisabab shakhsiatika, walakin lamaa 'akun ealayh eindama takun bijanibi, 'uhibuk lays min 'ajl ma sanaeath binafsika, walakin min 'ajl ma tasnaeuh li aydan.
-<br>
-       ♥️♥️
-    </div>
-
-    <div class="divider-anim"></div>
-
-    <div class="videos">
-        <div class="video-card"><iframe src="https://www.youtube.com/embed/mcp5fsJ8dw8" allowfullscreen></iframe></div>
-        <div class="video-card"><iframe src="https://www.youtube.com/embed/HVgy8Ge0GJQ" allowfullscreen></iframe></div>
-        <div class="video-card"><iframe src="https://www.youtube.com/embed/1uMZhJeXLYw" allowfullscreen></iframe></div>
-    </div>
-
-    <div class="social">
-        <a href="#"><img src="https://img.alfrsantv.com/img/f176524531738251.png"></a>
-        <a href="#"><img src="https://img.alfrsantv.com/img/f176524532676071.png"></a>
-        <a href="#"><img src="https://img.alfrsantv.com/img/f176524533570421.png"></a>
-    </div>
+<div class="card">
+  <div class="glow"></div>
+  <img class="avatar" src="https://mahosss.github.io/Dullcpro/ava.png" alt="Avatar" />
+  <h1>Dullcpro</h1>
+  <p>
+    أحبك فقط بسبب شخصيتك، وليس لما تمتلكه…
+    أحبك لما تصنعه بي، ولما تضيفه لروحي وجودك.
+  </p>
+  <div class="heart">❤</div>
 </div>
-
-<script>
-const emojis = document.querySelectorAll('.emoji');
-emojis.forEach(e => {
-    e.style.bottom = '0px';
-    e.style.animationName = 'floatUp';
-    e.style.animationIterationCount = 'infinite';
-    e.style.animationTimingFunction = 'linear';
-});
-</script>
-
 </body>
 </html>
