--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 <body>
 <div class="card">
   <div class="glow"></div>
-  <img class="avatar" src="https://mahosss.github.io/Dullcpro/ava.png" alt="Avatar" />
-  <h1>Dullcpro</h1>
+  <img class="avatar" src="https://img.alfrsantv.com/img/f176550047297151.png" alt="Avatar" />
+  <h1>Dullc</h1>
   <p>
     أحبك فقط بسبب شخصيتك، وليس لما تمتلكه…
     أحبك لما تصنعه بي، ولما تضيفه لروحي وجودك.
