--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Dullcpro – Golden Edition</title>
+<title>Dullcpro – Edition</title>
 <style>
   * {margin:0; padding:0; box-sizing:border-box; font-family:"Cairo", sans-serif;}
   body {
@@ -11,9 +11,9 @@
     color:#f5d380;
     display:flex;
     justify-content:center;
-    align-items:center;
+    align-items:flex-start;
     min-height:100vh;
-    padding:20px;
+    padding:25px;
   }
   .card {
     width:100%;
@@ -21,7 +21,7 @@
     background:#111;
     border:1px solid rgba(255,215,0,0.25);
     border-radius:30px;
-    padding:35px 30px;
+    padding:35px 30px 45px;
     text-align:center;
     box-shadow:0 0 25px rgba(255,215,0,0.15);
     position:relative;
@@ -47,24 +47,72 @@
     z-index:2;
   }
   h1 {
-    margin:18px 0 10px;
-    font-size:28px;
-    letter-spacing:1px;
+    margin:18px 0 5px;
+    font-size:30px;
+    letter-spacing:2px;
+    background: linear-gradient(90deg, #f5d380, #fff6d0, #f5d380);
+    -webkit-background-clip:text;
+    color:transparent;
+    animation:shine 4s linear infinite;
   }
-  p {
+  @keyframes shine {
+    0% {background-position:-150px;} 
+    100% {background-position:150px;} 
+  }
+
+  /* الجملتين بشكل مميز */
+  .quotes{
+    margin-top:18px;
     font-size:17px;
-    line-height:1.8;
-    opacity:.9;
-    margin-bottom:20px;
+    line-height:1.9;
+    opacity:.95;
+    background:rgba(255,215,0,0.05);
+    padding:15px;
+    border-radius:20px;
+    border:1px solid rgba(255,215,0,0.12);
+    box-shadow:0 0 12px rgba(255,215,0,0.07);
   }
+  .quotes span{
+    display:block;
+    margin-bottom:10px;
+  }
+
   .heart {
     font-size:40px;
+    margin-top:15px;
     animation:pulse 1.4s infinite ease-in-out;
   }
   @keyframes pulse {
     0% {transform:scale(1); opacity:0.8;}
     50% {transform:scale(1.3); opacity:1;}
     100% {transform:scale(1); opacity:0.8;}
+  }
+
+  /* قسم الفيديوهات */
+  .videos {
+    width:100%;
+    margin-top:35px;
+    padding-top:20px;
+    border-top:1px solid rgba(255,215,0,0.25);
+  }
+  .videos h2{
+    font-size:22px;
+    margin-bottom:15px;
+    color:#f5d380;
+    letter-spacing:1px;
+  }
+  .video-box{
+    background:#000;
+    border-radius:16px;
+    overflow:hidden;
+    margin-bottom:18px;
+    border:1px solid rgba(255,215,0,0.25);
+    box-shadow:0 0 15px rgba(255,215,0,0.2);
+  }
+  .video-box iframe{
+    width:100%;
+    height:230px;
+    border:0;
   }
 </style>
 </head>
@@ -73,11 +121,26 @@
   <div class="glow"></div>
   <img class="avatar" src="https://img.alfrsantv.com/img/f176550047297151.png" alt="Avatar" />
   <h1>Dullc</h1>
-  <p>
-    أحبك فقط بسبب شخصيتك، وليس لما تمتلكه…
-    أحبك لما تصنعه بي، ولما تضيفه لروحي وجودك.
-  </p>
+
+  <div class="quotes">
+    <span>أحبك فقط بسبب شخصيتك، وليس لما تمتلكه…</span>
+    <span>أحبك لما تصنعه بي، ولما تضيفه لروحي وجودك.</span>
+  </div>
+
   <div class="heart">❤</div>
+
+  <div class="videos">
+    <h2>فيديوهات يوتيوب</h2>
+
+    <div class="video-box">
+      <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" allowfullscreen></iframe>
+    </div>
+
+    <div class="video-box">
+      <iframe src="https://www.youtube.com/embed/9bZkp7q19f0" allowfullscreen></iframe>
+    </div>
+
+  </div>
 </div>
 </body>
 </html>
