--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Dullcpro – Edition</title>
-<link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
+<title>Dullc – Golden</title>
 <style>
-  * {margin:0; padding:0; box-sizing:border-box; font-family:"Cairo", sans-serif;}
+  * {margin:0; padding:0; box-sizing:border-box; font-family:"Tajawal", sans-serif;}
   body {
     background:#0b0b0b;
     color:#f5d380;
@@ -61,7 +60,6 @@
     100% {background-position:150px;} 
   }
 
-  /* الجملتين بشكل مميز */
   .quotes{
     margin-top:18px;
     font-size:17px;
@@ -89,30 +87,37 @@
     100% {transform:scale(1); opacity:0.8;}
   }
 
-  /* قسم الفيديوهات */
+  /* قسم الفيديوهات – شكل حالات واتس */
   .videos {
     width:100%;
     margin-top:35px;
     padding-top:20px;
     border-top:1px solid rgba(255,215,0,0.25);
+    overflow-x:auto;
+    white-space:nowrap;
+    scrollbar-width:thin;
   }
   .videos h2{
     font-size:22px;
     margin-bottom:15px;
     color:#f5d380;
     letter-spacing:1px;
+    text-align:right;
   }
   .video-box{
+    display:inline-block;
+    width:150px;
+    height:260px;
     background:#000;
     border-radius:16px;
     overflow:hidden;
-    margin-bottom:18px;
+    margin:0 10px;
     border:1px solid rgba(255,215,0,0.25);
     box-shadow:0 0 15px rgba(255,215,0,0.2);
   }
   .video-box iframe{
-    width:100%;
-    height:230px;
+    width:150px;
+    height:260px;
     border:0;
   }
 </style>
@@ -131,7 +136,7 @@
   <div class="heart">❤</div>
 
   <div class="videos">
-    <h2>فيديوهات يوتيوب</h2>
+    <h2>فيديوهات</h2>
 
     <div class="video-box">
       <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" allowfullscreen></iframe>
@@ -139,6 +144,14 @@
 
     <div class="video-box">
       <iframe src="https://www.youtube.com/embed/9bZkp7q19f0" allowfullscreen></iframe>
+    </div>
+
+    <div class="video-box">
+      <iframe src="https://www.youtube.com/embed/eY52Zsg-KVI" allowfullscreen></iframe>
+    </div>
+
+    <div class="video-box">
+      <iframe src="https://www.youtube.com/embed/3JZ_D3ELwOQ" allowfullscreen></iframe>
     </div>
 
   </div>
