--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Dullcpro – Golden Edition</title>
+<title>Edition</title>
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700;800&display=swap');
 
@@ -19,7 +19,7 @@
   }
   .card {
     width:100%;
-    max-width:600px;
+    max-width:420px;
     background:#111;
     border:1px solid rgba(255,215,0,0.25);
     border-radius:30px;
@@ -146,11 +146,22 @@
   <div class="heart">❤</div>
 
   <div class="videos">
-    <h2>فيديوهات</h2>
-
-    <div class="video-box">
-      <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" allowfullscreen></iframe>
+    <div class="videos-title">فيديوهاتي</div>
+    <div class="videos-scroll">
+      <div class="video-box">
+        <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" allowfullscreen></iframe>
+      </div>
+      <div class="video-box">
+        <iframe src="https://www.youtube.com/embed/9bZkp7q19f0" allowfullscreen></iframe>
+      </div>
+      <div class="video-box">
+        <iframe src="https://www.youtube.com/embed/eY52Zsg-KVI" allowfullscreen></iframe>
+      </div>
+      <div class="video-box">
+        <iframe src="https://www.youtube.com/embed/3JZ_D3ELwOQ" allowfullscreen></iframe>
+      </div>
     </div>
+  </div>
 
     <div class="video-box">
       <iframe src="https://www.youtube.com/embed/9bZkp7q19f0" allowfullscreen></iframe>
