--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Edition</title>
+<title>Dullcpro – Golden Edition</title>
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700;800&display=swap');
 
@@ -19,7 +19,7 @@
   }
   .card {
     width:100%;
-    max-width:600px;
+    max-width:420px;
     background:#111;
     border:1px solid rgba(255,215,0,0.25);
     border-radius:30px;
@@ -47,7 +47,19 @@
     box-shadow:0 0 18px rgba(255,215,0,0.4);
     position:relative;
     z-index:2;
-  }
+    overflow:hidden;
+    transition: transform 0.4s ease, box-shadow 0.4s ease;
+}
+.avatar img {
+    width:100%;
+    height:100%;
+    border-radius:50%;
+    object-fit:cover;
+    transition: transform 0.4s ease;
+}
+.avatar:hover img {
+    transform: scale(1.2);
+}
   h1 {
     margin:18px 0 5px;
     font-size:30px;
@@ -163,7 +175,6 @@
     </div>
   </div>
 
-    
   </div>
 </div>
 </body>
