--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Dullcpro – Golden Edition</title>
+<title>Dullc Edition</title>
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700;800&display=swap');
 
@@ -142,6 +142,29 @@
     height:260px;
     border:0;
   }
+  /* تأثير دخول الفيديوهات عند الظهور */
+  .video-box{
+    opacity:0;
+    transform:translateY(20px);
+    animation:fadeInUp .8s ease forwards;
+  }
+  .video-box:nth-child(1){animation-delay:.1s}
+  .video-box:nth-child(2){animation-delay:.25s}
+  .video-box:nth-child(3){animation-delay:.4s}
+  .video-box:nth-child(4){animation-delay:.55s}
+
+  @keyframes fadeInUp{
+    0%{opacity:0; transform:translateY(25px);}
+    100%{opacity:1; transform:translateY(0);}
+  }
+
+  /* تأثير صغير عند تمرير الماوس على الفيديو */
+  .video-box:hover{
+    transform:scale(1.07);
+    transition:.25s ease;
+    box-shadow:0 0 18px rgba(255,215,0,0.4);
+  }
+
 </style>
 </head>
 <body>
@@ -175,7 +198,8 @@
     </div>
   </div>
 
-  </div>
 </div>
+  </div>
+
 </body>
 </html>
