--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
   <h1>Dullc</h1>
 
   <div class="quotes">
-    <span>أحبك فقط بسبب شخصيتك، وليس لما تمتلكه…</span>
-    <span>أحبك لما تصنعه بي، ولما تضيفه لروحي وجودك.♡</span>
+    <span>..أحبك فقط بسبب شخصيتك، وليس لما تمتلكه</span>
+    <span>♡ .أحبك لما تصنعه بي، ولما تضيفه لروحي وجودك</span>
   </div>
 
   <div class="heart">❤</div>
