--- a/index.html
+++ b/index.html
@@ -187,7 +187,8 @@
 
   <div class="quotes">
     <span>..أحبك فقط بسبب شخصيتك، وليس لما تمتلكه</span>
-    <span>♡ .أحبك لما تصنعه بي، ولما تضيفه لروحي وجودك</span>
+    <span>.أحبك لما تصنعه بي، ولما تضيفه لروحي وجودك</span>
+    ♡
   </div>
 
   <div class="heart">❤</div>
