--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 <div class="card">
   <div class="glow"></div>
   <img class="avatar" src="https://img.alfrsantv.com/img/f176550047297151.png" alt="Avatar" />
-  <h1>Dullc</h1>
+  <h1>ɖƲιιȻ</h1>
 
   <div class="quotes">
     <span>..أحبك فقط بسبب شخصيتك، وليس لما تمتلكه</span>
