--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ h1 {
 <div class="card">
   <div class="glow"></div>
   <div class="avatar"><img src="https://img.alfrsantv.com/img/f176550047297151.png" alt="Avatar"/></div>
-  <h1>Dullc</h1>
+  <h1>ɖƲιιȻ</h1>
 
   <div class="quotes">
     <span>أحبك فقط بسبب شخصيتك، وليس لما تمتلكه…</span>
