--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@ body {
   position:relative;
   overflow:hidden;
   animation:fadeIn 1s ease;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .glow {
   position:absolute;
@@ -38,6 +41,11 @@ body {
   filter:blur(70px);
   z-index:0;
   animation:glowAnim 3s ease-in-out infinite alternate;
+}
+.avatar-container {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
 }
 .avatar {
   width:130px;
@@ -63,8 +71,29 @@ body {
   transform: scale(1.25);
   box-shadow:0 0 30px rgba(255,215,0,0.6);
 }
+.side-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 15px;
+}
+.text-line {
+  color: #f5d380;
+  font-size: 18px;
+  font-weight: 700;
+  text-align: left;
+  animation: upDown 2s ease-in-out infinite alternate;
+  margin-bottom: 5px;
+}
+.text-line:nth-child(2) {
+  animation-delay: 0.3s;
+}
+@keyframes upDown {
+  0% { transform: translateY(0); }
+  100% { transform: translateY(-8px); }
+}
 h1 {
-  margin:18px 0 5px;
+  margin:10px 0 5px;
   font-size:30px;
   letter-spacing:2px;
   background: linear-gradient(90deg, #f5d380, #fff6d0, #f5d380);
@@ -124,7 +153,6 @@ h1 {
   0%{transform:translateX(-50%) scale(1);}
   100%{transform:translateX(-50%) scale(1.05);}
 }
-
 /* قسم الفيديوهات */
 .videos {
   width:100%;
@@ -177,7 +205,6 @@ h1 {
 .video-box:nth-child(1){animation-delay:.1s}
 .video-box:nth-child(2){animation-delay:.25s}
 .video-box:nth-child(3){animation-delay:.4s}
-.video-box:nth-child(4){animation-delay:.55s}
 .video-box iframe{
   width:150px;
   height:260px;
@@ -193,7 +220,15 @@ h1 {
 <body>
 <div class="card">
   <div class="glow"></div>
-  <div class="avatar"><img src="https://img.alfrsantv.com/img/f176550047297151.png" alt="Avatar"/></div>
+
+  <div class="avatar-container">
+    <div class="avatar"><img src="https://img.alfrsantv.com/img/f176550047297151.png" alt="Avatar"/></div>
+    <div class="side-text">
+      <div class="text-line">الأفعى</div>
+      <div class="text-line">أهم لسان طويل</div>
+    </div>
+  </div>
+
   <h1>ɖƲιιȻ</h1>
 
   <div class="quotes">
