--- a/index.html
+++ b/index.html
@@ -29,9 +29,6 @@ body {
   position:relative;
   overflow:hidden;
   animation:fadeIn 1s ease;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 .glow {
   position:absolute;
@@ -44,7 +41,8 @@ body {
 }
 .avatar-container {
   display: flex;
-  align-items: center;
+  justify-content: flex-start;
+  width: 100%;
   margin-bottom: 20px;
 }
 .avatar {
@@ -71,19 +69,20 @@ body {
   transform: scale(1.25);
   box-shadow:0 0 30px rgba(255,215,0,0.6);
 }
-.side-text {
+
+/* الجمل في وسط الكارد */
+.side-text-center {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  margin-left: 15px;
+  align-items: center;
+  margin-bottom: 15px;
 }
 .text-line {
   color: #f5d380;
   font-size: 18px;
   font-weight: 700;
-  text-align: left;
-  animation: upDown 2s ease-in-out infinite alternate;
   margin-bottom: 5px;
+  animation: upDown 2s ease-in-out infinite alternate;
 }
 .text-line:nth-child(2) {
   animation-delay: 0.3s;
@@ -92,6 +91,7 @@ body {
   0% { transform: translateY(0); }
   100% { transform: translateY(-8px); }
 }
+
 h1 {
   margin:10px 0 5px;
   font-size:30px;
@@ -106,6 +106,7 @@ h1 {
   0% {background-position:-150px;} 
   100% {background-position:150px;} 
 }
+
 .quotes{
   margin-top:18px;
   font-size:17px;
@@ -130,6 +131,7 @@ h1 {
   0%{opacity:0; transform:translateY(15px);}
   100%{opacity:1; transform:translateY(0);}
 }
+
 .heart {
   font-size:40px;
   margin-top:15px;
@@ -153,6 +155,7 @@ h1 {
   0%{transform:translateX(-50%) scale(1);}
   100%{transform:translateX(-50%) scale(1.05);}
 }
+
 /* قسم الفيديوهات */
 .videos {
   width:100%;
@@ -197,7 +200,7 @@ h1 {
   overflow:hidden;
   margin:0 10px;
   border:1px solid rgba(255,215,0,0.25);
-  box-shadow:0 0 15px rgba(255,215,0,0.2);
+  box-shadow:0 0 15px rgba(255,215,0.2);
   opacity:0;
   transform:translateY(20px);
   animation:fadeInUp .8s ease forwards;
@@ -223,10 +226,11 @@ h1 {
 
   <div class="avatar-container">
     <div class="avatar"><img src="https://img.alfrsantv.com/img/f176550047297151.png" alt="Avatar"/></div>
-    <div class="side-text">
-      <div class="text-line">الأفعى</div>
-      <div class="text-line">أهم لسان طويل</div>
-    </div>
+  </div>
+
+  <div class="side-text-center">
+    <div class="text-line">الأفعى</div>
+    <div class="text-line">أهم لسان طويل</div>
   </div>
 
   <h1>ɖƲιιȻ</h1>
