--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Dullc</title>
+<title>Dullc Edition</title>
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700;800&display=swap');
 
@@ -30,6 +30,15 @@ body {
   overflow:hidden;
   animation:fadeIn 1s ease;
 }
+
+/* flex container للصورة والجملتين */
+.top-section {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin-bottom: 20px;
+}
+
 .glow {
   position:absolute;
   top:-40%; left:50%; transform:translateX(-50%);
@@ -39,12 +48,7 @@ body {
   z-index:0;
   animation:glowAnim 3s ease-in-out infinite alternate;
 }
-.avatar-container {
-  display: flex;
-  justify-content: flex-start;
-  width: 100%;
-  margin-bottom: 20px;
-}
+
 .avatar {
   width:130px;
   height:130px;
@@ -70,12 +74,12 @@ body {
   box-shadow:0 0 30px rgba(255,215,0,0.6);
 }
 
-/* الجمل في وسط الكارد */
-.side-text-center {
+/* العبارات جنب الصورة */
+.side-text-right {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  margin-bottom: 15px;
+  align-items: flex-start;
+  margin-left: 20px;
 }
 .text-line {
   color: #f5d380;
@@ -224,13 +228,13 @@ h1 {
 <div class="card">
   <div class="glow"></div>
 
-  <div class="avatar-container">
+  <div class="top-section">
     <div class="avatar"><img src="https://img.alfrsantv.com/img/f176550047297151.png" alt="Avatar"/></div>
-  </div>
 
-  <div class="side-text-center">
-    <div class="text-line">الأفعى</div>
-    <div class="text-line">أهم لسان طويل</div>
+    <div class="side-text-right">
+      <div class="text-line">الأفعى</div>
+      <div class="text-line">أهم لسان طويل</div>
+    </div>
   </div>
 
   <h1>ɖƲιιȻ</h1>
