--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Dullc Edition</title>
+<title>Dullc</title>
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700;800&display=swap');
 
@@ -31,7 +31,6 @@ body {
   animation:fadeIn 1s ease;
 }
 
-/* flex container للصورة والجملتين */
 .top-section {
   display: flex;
   align-items: center;
@@ -74,7 +73,6 @@ body {
   box-shadow:0 0 30px rgba(255,215,0,0.6);
 }
 
-/* العبارات جنب الصورة */
 .side-text-right {
   display: flex;
   flex-direction: column;
@@ -160,7 +158,6 @@ h1 {
   100%{transform:translateX(-50%) scale(1.05);}
 }
 
-/* قسم الفيديوهات */
 .videos {
   width:100%;
   margin-top:20px;
