--- a/index.html
+++ b/index.html
@@ -24,23 +24,16 @@ body {
   border:1px solid rgba(255,215,0,0.25);
   border-radius:30px;
   padding:35px 30px 45px;
-  text-align:center;
   box-shadow:0 0 25px rgba(255,215,0,0.15);
   position:relative;
   overflow:hidden;
   animation:fadeIn 1s ease;
+  display:flex;
+  flex-direction:row;
+  align-items:flex-start;
 }
 
-.glow {
-  position:absolute;
-  top:-40%; left:50%; transform:translateX(-50%);
-  width:400px; height:400px;
-  background: radial-gradient(circle, rgba(255,215,0,0.25), transparent 70%);
-  filter:blur(70px);
-  z-index:0;
-  animation:glowAnim 3s ease-in-out infinite alternate;
-}
-
+/* الصورة جهة اليسار */
 .avatar {
   width:130px;
   height:130px;
@@ -49,11 +42,9 @@ body {
   padding:5px;
   background:#000;
   box-shadow:0 0 18px rgba(255,215,0,0.4);
-  position:relative;
-  z-index:2;
   overflow:hidden;
   transition: transform 0.4s ease, box-shadow 0.4s ease;
-  margin:0 auto;
+  flex-shrink:0;
 }
 .avatar img {
   width:100%;
@@ -67,178 +58,63 @@ body {
   box-shadow:0 0 30px rgba(255,215,0,0.6);
 }
 
-/* الاسم تحت الصورة */
+/* المحتوى بجانب الصورة */
+.content {
+  margin-left:20px;
+  text-align:left;
+}
+
+/* الاسم */
 h1 {
-  margin:15px 0 5px;
-  font-size:30px;
-  letter-spacing:2px;
+  font-size:28px;
+  letter-spacing:1px;
   background: linear-gradient(90deg, #f5d380, #fff6d0, #f5d380);
   -webkit-background-clip:text;
   color:transparent;
-  animation:shine 4s linear infinite;
-  text-shadow:0 0 8px rgba(255,215,0,0.3);
+  text-shadow:0 0 6px rgba(255,215,0,0.3);
+  margin-bottom:5px;
 }
 
-/* الجملة الجديدة تحت الاسم بتأثير الموجة */
+/* النصين تحت الاسم بتأثير موجة */
 .wave-text {
   font-size:16px;
   color:#f5d380;
+  display:flex;
+  flex-direction:column;
+}
+.wave-text span{
   display:inline-block;
-  animation:wave 1.5s ease-in-out infinite;
-  margin-bottom:20px;
+  animation:wave 1.5s infinite;
 }
-@keyframes wave {
-  0% { transform: translateY(0px);}
-  25% { transform: translateY(-4px);}
-  50% { transform: translateY(0px);}
-  75% { transform: translateY(4px);}
-  100% { transform: translateY(0px);}
-}
-
-.quotes{
-  margin-top:18px;
-  font-size:17px;
-  line-height:1.9;
-  opacity:0;
-  background:rgba(255,215,0,0.05);
-  padding:15px;
-  border-radius:20px;
-  border:1px solid rgba(255,215,0,0.12);
-  box-shadow:0 0 12px rgba(255,215,0,0.07);
-  animation:fadeInUp 1s ease forwards 0.5s;
-}
-.quotes span{
-  display:block;
-  margin-bottom:10px;
-  opacity:0;
-  animation:quoteAppear 0.8s ease forwards;
-}
-.quotes span:nth-child(1){animation-delay:0.7s}
-.quotes span:nth-child(2){animation-delay:1s}
-@keyframes quoteAppear{
-  0%{opacity:0; transform:translateY(15px);}
-  100%{opacity:1; transform:translateY(0);}
+.wave-text span:nth-child(1) {animation-delay:0s;}
+.wave-text span:nth-child(2) {animation-delay:0.3s;}
+@keyframes wave{
+  0%,100% {transform: translateY(0);}
+  25% {transform: translateY(-3px);}
+  50% {transform: translateY(0);}
+  75% {transform: translateY(3px);}
 }
 
+/* باقي الصفحة */
 .heart {
   font-size:40px;
   margin-top:15px;
-  animation:pulse 1.4s infinite ease-in-out, fadeInUp 1s ease forwards 1.2s;
-  opacity:0;
-}
-@keyframes pulse {
-  0% {transform:scale(1); opacity:0.8;}
-  50% {transform:scale(1.3); opacity:1;}
-  100% {transform:scale(1); opacity:0.8;}
-}
-@keyframes fadeInUp{
-  0%{opacity:0; transform:translateY(25px);}
-  100%{opacity:1; transform:translateY(0);}
-}
-@keyframes fadeIn{
-  0%{opacity:0; transform:scale(0.95);}
-  100%{opacity:1; transform:scale(1);}
-}
-@keyframes glowAnim{
-  0%{transform:translateX(-50%) scale(1);}
-  100%{transform:translateX(-50%) scale(1.05);}
-}
-
-/* قسم الفيديوهات */
-.videos {
-  width:100%;
-  margin-top:20px;
-  padding-top:10px;
-  border-top:1px solid rgba(255,215,0,0.25);
-}
-.videos-title{
-  background:#f5d380;
-  color:#000;
-  padding:10px 18px;
-  font-size:18px;
-  font-weight:700;
-  border-radius:25px;
-  display:inline-block;
-  margin-bottom:15px;
-}
-.videos-scroll{
-  overflow-x:auto;
-  white-space:nowrap;
-  padding-bottom:10px;
-  scrollbar-width:thin;
-  scrollbar-color:#f5d380 #222;
-}
-.videos-scroll::-webkit-scrollbar{
-  height:8px;
-}
-.videos-scroll::-webkit-scrollbar-track{
-  background:#222;
-  border-radius:10px;
-}
-.videos-scroll::-webkit-scrollbar-thumb{
-  background:#f5d380;
-  border-radius:10px;
-}
-.video-box{
-  display:inline-block;
-  width:150px;
-  height:260px;
-  background:#000;
-  border-radius:16px;
-  overflow:hidden;
-  margin:0 10px;
-  border:1px solid rgba(255,215,0,0.25);
-  box-shadow:0 0 15px rgba(255,215,0.2);
-  opacity:0;
-  transform:translateY(20px);
-  animation:fadeInUp .8s ease forwards;
-}
-.video-box:nth-child(1){animation-delay:.1s}
-.video-box:nth-child(2){animation-delay:.25s}
-.video-box:nth-child(3){animation-delay:.4s}
-.video-box iframe{
-  width:150px;
-  height:260px;
-  border:0;
-}
-.video-box:hover{
-  transform:scale(1.07);
-  transition:.25s ease;
-  box-shadow:0 0 18px rgba(255,215,0,0.4);
+  color:#f5d380;
 }
 </style>
 </head>
 <body>
 <div class="card">
-  <div class="glow"></div>
-
   <div class="avatar"><img src="https://img.alfrsantv.com/img/f176550047297151.png" alt="Avatar"/></div>
 
-  <h1>ɖƲιιȻ</h1>
-  <div class="wave-text">مرحبا بك في صفحتي ✨</div>
-
-  <div class="quotes">
-    <span>أحبك فقط بسبب شخصيتك، وليس لما تمتلكه…</span>
-    <span>أحبك لما تصنعه بي، ولما تضيفه لروحي وجودك.</span>
-  </div>
-
-  <div class="heart">❤</div>
-
-  <div class="videos">
-    <div class="videos-title">فيديوهاتي</div>
-    <div class="videos-scroll">
-      <div class="video-box">
-        <iframe src="https://www.youtube.com/embed/1uMZhJeXLYw" allowfullscreen></iframe>
-      </div>
-      <div class="video-box">
-        <iframe src="https://www.youtube.com/embed/mcp5fsJ8dw8" allowfullscreen></iframe>
-      </div>
-      <div class="video-box">
-        <iframe src="https://www.youtube.com/embed/HVgy8Ge0GJQ" allowfullscreen></iframe>
-      </div>
+  <div class="content">
+    <h1>ɖƲιιȻ</h1>
+    <div class="wave-text">
+      <span>الحربوقة</span>
+      <span>أم لسان طويل</span>
     </div>
+    <div class="heart">❤</div>
   </div>
-
 </div>
 </body>
 </html>
