--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ body {
   position:relative;
   overflow:hidden;
   animation:fadeIn 1s ease;
-  text-align:center;
+  text-align:left; /* غيرت للتموضع على اليسار */
 }
 
 .glow {
@@ -52,7 +52,7 @@ body {
   box-shadow:0 0 18px rgba(255,215,0,0.4);
   overflow:hidden;
   transition: transform 0.4s ease, box-shadow 0.4s ease;
-  margin:0 auto;
+  margin-bottom:10px;
 }
 .avatar img {
   width:100%;
@@ -73,17 +73,16 @@ h1 {
   -webkit-background-clip:text;
   color:transparent;
   text-shadow:0 0 6px rgba(255,215,0,0.3);
-  margin-top:15px;
   margin-bottom:5px;
 }
 
-/* النصين تحت الاسم بتأثير موجة */
+/* النصين تحت الاسم بتأثير موجة، جهة اليسار */
 .wave-text {
-  font-size:16px;
-  color:#f5d380;
+  font-size:14px;
+  color:#ffd700;
   display:flex;
   flex-direction:column;
-  gap:5px;
+  gap:3px;
 }
 .wave-text span{
   display:inline-block;
@@ -93,9 +92,9 @@ h1 {
 .wave-text span:nth-child(2) {animation-delay:0.3s;}
 @keyframes wave{
   0%,100% {transform: translateY(0);}
-  25% {transform: translateY(-3px);}
+  25% {transform: translateY(-2px);}
   50% {transform: translateY(0);}
-  75% {transform: translateY(3px);}
+  75% {transform: translateY(2px);}
 }
 
 /* اقتباسات */
