--- a/index.html
+++ b/index.html
@@ -61,19 +61,23 @@ body {
   box-shadow:0 0 30px rgba(255,215,0,0.6);
 }
 
+.name-container {
+  width: 100%;
+  text-align: center;
+  margin-top: 10px;
+}
 h1 {
-  margin:15px 0 5px;
   font-size:28px;
   letter-spacing:2px;
   color:#f5d380;
-  text-align:center;
+  margin-bottom:5px;
 }
 
 .wave-text {
   color:#f5d380;
   font-size:14px;
   text-align:center;
-  margin:2px 0;
+  margin:1px 0;
   animation:wave 2s ease-in-out infinite alternate;
 }
 .wave-text:nth-child(2) {
@@ -204,7 +208,7 @@ h1 {
 .video-box:hover{
   transform:scale(1.07);
   transition:.25s ease;
-  box-shadow:0 0 18px rgba(255,215,0,0.4);
+  box-shadow:0 0 18px rgba(255,215,0.4);
 }
 </style>
 </head>
@@ -214,9 +218,11 @@ h1 {
 
   <div class="top-section">
     <div class="avatar"><img src="https://img.alfrsantv.com/img/f176550047297151.png" alt="Avatar"/></div>
-    <h1>ɖƲιιȻ</h1>
-    <div class="wave-text">الحربوقة 🐍</div>
-    <div class="wave-text">أم لسان طويل</div>
+    <div class="name-container">
+      <h1>ɖƲιιȻ</h1>
+      <div class="wave-text">الحربوقة 🐍</div>
+      <div class="wave-text">أم لسان طويل</div>
+    </div>
   </div>
 
   <div class="quotes">
