--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Dullc1</title>
+<title>Dullc</title>
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700;800&display=swap');
 
@@ -31,7 +31,6 @@ body {
   animation:fadeIn 1s ease;
 }
 
-/* بلوك الصورة والاسم والجملتين */
 .top-section {
   display: flex;
   width: 100%;
@@ -40,8 +39,8 @@ body {
 .left-box {
   display: flex;
   flex-direction: column;
-  align-items: center; /* الاسم والجملتين يتوسطوا الصورة */
-  margin-right: auto;  /* يخلي البلوك ناحية اليسار فقط */
+  align-items: center; 
+  margin-right: auto;  
 }
 
 .avatar {
@@ -149,7 +148,6 @@ h1.name {
   100%{transform:translateX(-50%) scale(1.05);}
 }
 
-/* قسم الفيديوهات */
 .videos {
   width:100%;
   margin-top:20px;
