--- a/index.html
+++ b/index.html
@@ -209,6 +209,19 @@ h1.name {
   transition:.25s ease;
   box-shadow:0 0 18px rgba(255,215,0,0.4);
 }
+
+
+@keyframes typewriter{
+  0%{width:0;}
+  100%{width:100%;}
+}
+.text-animate {
+  display:inline-block;
+  overflow:hidden;
+  white-space:nowrap;
+  animation: typewriter 3s steps(30) forwards;
+}
+
 </style>
 </head>
 <body>
